--- a/package.json
+++ b/package.json
@@ -18,5 +18,41 @@
   "devDependencies": {
     "mocha": "^3.2.0"
   },
-  "homepage": "https://github.com/yankouskia/additional_5#readme"
+  "homepage": "https://github.com/yankouskia/additional_5#readme",
+  "dependencies": {
+    "balanced-match": "^1.0.2",
+    "commander": "^2.9.0",
+    "debug": "^2.6.8",
+    "concat-map": "^0.0.1",
+    "diff": "^3.2.0",
+    "escape-string-regexp": "^1.0.5",
+    "fs.realpath": "^1.0.0",
+    "brace-expansion": "^1.1.11",
+    "browser-stdout": "^1.3.0",
+    "graceful-readlink": "^1.0.1",
+    "glob": "^7.1.1",
+    "growl": "^1.9.2",
+    "he": "^1.1.1",
+    "inflight": "^1.0.6",
+    "has-flag": "^1.0.0",
+    "json3": "^3.3.2",
+    "lodash._basecopy": "^3.0.1",
+    "inherits": "^2.0.4",
+    "lodash._baseassign": "^3.2.0",
+    "lodash._basecreate": "^3.0.3",
+    "lodash._getnative": "^3.9.1",
+    "lodash._isiterateecall": "^3.0.9",
+    "lodash.create": "^3.1.1",
+    "lodash.isarguments": "^3.1.0",
+    "lodash.isarray": "^3.0.4",
+    "lodash.keys": "^3.1.2",
+    "mkdirp": "^0.5.1",
+    "minimist": "^0.0.8",
+    "minimatch": "^3.0.4",
+    "ms": "^2.0.0",
+    "once": "^1.4.0",
+    "supports-color": "^3.1.2",
+    "path-is-absolute": "^1.0.1",
+    "wrappy": "^1.0.2"
+  }
 }
